LIMO-300: Fixed dialog overflow on fallback

--- a/src/components/livescore/ls-z-fallback/_ls-z-fallback.scss
+++ b/src/components/livescore/ls-z-fallback/_ls-z-fallback.scss
@@ -1639,9 +1639,10 @@
     }
   }
 
-  //dialog
+  //Dialog
   .mdl-dialog__content {
     overflow: auto;
+    box-shadow: none;
   }
 
   //Contest gift
